--- a/templates/recipe_view.html
+++ b/templates/recipe_view.html
@@ -165,7 +165,7 @@
                 <!-- Notes -->
                 {% if recipe.notes %}
                     <h2 class="mt-4 mb-3">Notes</h2>
-                    <div class="card bg-warning bg-opacity-10 border-warning mb-4">
+                    <div class="card bg-light mb-4">
                         <div class="card-body">
                             <pre class="mb-0" style="white-space: pre-wrap; font-family: inherit;">{{ recipe.notes }}</pre>
                         </div>
